prevent last dropdown from beign cut off by changing nav bar padding

--- a/src/style.css
+++ b/src/style.css
@@ -136,7 +136,7 @@ table {
     justify-content: space-between;
     background: rgb(239, 239, 239);
     height: 70px;
-    padding: 0px 10px;
+    padding: 0px 200px 0px 100px;
 }
 
 .nav .nav-buttons {
